# hptt

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  README.md  benchmark.sh  example.cc  genMacro.py  main.cc  perfRegression.py  sTranspose_210_384x2320x64.h  sTranspose_210_96x9216x96.h  sTranspose_3021_96x96x96x96.h  sTranspose_3210_96x96x96x96.h  sTranspose_43210_64x64x64x64x64.h  transpose.cc  ttc.cc  ttc.h  ttc_c.h  ttc_int.cc  ttc_int.h  ttc_utils.cc  ttc_utils.h
benchmark/: Makefile  benchmark.cpp  benchmark.sh  defines.h  maxFromFiles.py  reference.cpp  reference.h
cmake/: HPTTConfig.cmake.in  hptt-config.cmake.in
include/: compute_node.h  hptt.h  hptt_types.h  hptt_utils.h  macros.h  plan.h  transpose.h  types.h  utils.h
pythonAPI/: setup.py
pythonAPI/benchmark/: benchmark.py  benchmark.sh
pythonAPI/hptt/: __init__.py  hptt.py
pythonAPI/tests/: test_hptt.py
src/: hptt.cpp  hptt.h  hptt_utils.cpp  hptt_utils.h  macros.h  plan.cpp  transpose.cpp  utils.cpp
testframework/: CMakeLists.txt  Makefile  testframework.cpp
